# windi

./: .env_template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  start.sh
migrations/: env.py
migrations/versions/: 2025_05_15_0525-651edf163a56_init.py
src/: main.py
src/api/: __init__.py
src/api/routers/: auth.py  chat.py
src/api/schemas/: chat.py  group.py  user.py
src/core/: config.py  security.py
src/services/: chat.py  user.py
src/storage/: __init__.py
src/storage/models/: base.py  chat.py  db_helper.py  enums.py  group.py  message.py  user.py  users_groups.py
src/storage/models/mixins/: id_int_pk.py
src/storage/repositories/: base.py  chat.py  group.py  message.py  user.py
src/utils/: connection_manager.py
tests/: conftest.py  test_auth.py  test_chat.py
tests/fixtures/: chats.py  client.py  db.py  messages.py  user.py
